# GeoMind

./: .gitignore  README.en.md  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.github/: pull_request_template.md
backend/: pyproject.toml
backend/backend/api/: app.py  deps.py  routes.py
backend/backend/app/: builtin_templates.py  compiler.py  main.py  models.py  planner.py  providers.py  services.py  storage.py  validator.py
backend/backend/auth/: base.py  browser_auth.py  manager.py  service_account_auth.py
backend/backend/core/: builtin.py  diagnostics.py  models.py  planner.py  registries.py  validator.py
backend/backend/core/compiler/: gee.py
backend/backend/providers/: gee_provider.py  local_python_provider.py
backend/backend/services/: ai_service.py  llm_provider.py  project_service.py  run_service.py  template_service.py  workflow_service.py
backend/backend/storage/: sqlite_repository.py
backend/geomind_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: bootstrap.ps1  dev.ps1  test.ps1
backend/tests/: service-account.json  test_api.py
backend/tests/data/: gee_ai.sqlite3
backend/tests/fixtures/plans/: ndvi_quick_analysis.json
backend/tests/fixtures/scripts/: ndvi_quick_analysis.js
backend/tests/fixtures/workflows/: invalid_cycle.json  ndvi_quick_analysis.json
desktop/: index.html
docs/: README.md  architecture.md  backend-api.md  backend-module-boundaries.md  contributing.md  development-guide.md  frontend-ux.md  project-overview.md  roadmap.md  (+2 more)
(+43 files in other folders)
