[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geomind_backend"
version = "0.1.0"
description = "FastAPI backend for GeoMind"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116,<1.0",
  "uvicorn>=0.35,<1.0",
  "pydantic>=2.10,<3.0",
  "earthengine-api>=1.6,<2.0",
  "requests>=2.32,<3.0",
  "python-multipart>=0.0.20,<1.0",
  "pyshp>=2.3,<3.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0"
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
